// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/View allows "dir" to be overridden 1`] = `
<div
  class="css-view-13b7bgz"
  dir="rtl"
/>
`;

exports[`components/View default 1`] = `
<div
  class="css-view-13b7bgz"
/>
`;

exports[`components/View non-text is rendered 1`] = `
<div
  class="css-view-13b7bgz"
>
  <div
    class="css-view-13b7bgz"
    data-testid="1"
  />
</div>
`;

exports[`components/View prop "accessibilityLabel" value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-view-13b7bgz"
/>
`;

exports[`components/View prop "accessibilityLabelledBy" value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-view-13b7bgz"
/>
`;

exports[`components/View prop "accessibilityLiveRegion" value is set 1`] = `
<div
  aria-live="polite"
  class="css-view-13b7bgz"
/>
`;

exports[`components/View prop "accessibilityRole" value alters HTML element 1`] = `
<article
  class="css-view-13b7bgz"
  role="article"
/>
`;

exports[`components/View prop "accessibilityRole" value is "button" 1`] = `
<div
  class="css-view-13b7bgz"
  role="button"
  tabindex="0"
/>
`;

exports[`components/View prop "accessibilityRole" value is set 1`] = `
<div
  class="css-view-13b7bgz"
  role="presentation"
/>
`;

exports[`components/View prop "href" href with accessibilityRole 1`] = `
<a
  class="css-view-13b7bgz"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`components/View prop "href" value is set 1`] = `
<a
  class="css-view-13b7bgz"
  href="https://example.com"
/>
`;

exports[`components/View prop "hrefAttrs" null values are excluded 1`] = `
<a
  class="css-view-13b7bgz"
  href="https://example.com"
/>
`;

exports[`components/View prop "hrefAttrs" requires "href" 1`] = `
<div
  class="css-view-13b7bgz"
/>
`;

exports[`components/View prop "hrefAttrs" target variant is set 1`] = `
<a
  class="css-view-13b7bgz"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`components/View prop "hrefAttrs" value is set 1`] = `
<a
  class="css-view-13b7bgz"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`components/View prop "nativeID" value is set 1`] = `
<div
  class="css-view-13b7bgz"
  id="nativeID"
/>
`;

exports[`components/View prop "pointerEvents" 1`] = `
<div
  class="css-view-13b7bgz r-pointerEvents-ah5dr5"
/>
`;

exports[`components/View prop "ref" setNativeProps method style updates as expected 1`] = `
<div
  class="css-view-13b7bgz r-color-howw7u"
  style="width: 10px;"
/>
`;

exports[`components/View prop "ref" setNativeProps method style updates as expected 2`] = `
<div
  class="css-view-13b7bgz"
  style="width: 20px; color: rgb(255, 165, 0); height: 20px;"
/>
`;

exports[`components/View prop "ref" setNativeProps method style updates as expected 3`] = `
<div
  class="css-view-13b7bgz r-color-howw7u"
  style="width: 30px;"
/>
`;

exports[`components/View prop "ref" setNativeProps method style updates as expected 4`] = `
<div
  class="css-view-13b7bgz r-color-howw7u"
  style="width: 30px;"
/>
`;

exports[`components/View prop "ref" setNativeProps method style updates as expected 5`] = `
<div
  class="css-view-13b7bgz r-color-howw7u"
  style="width: 40px;"
/>
`;

exports[`components/View prop "ref" setNativeProps method works with react-native props 1`] = `
<div
  aria-label="label"
  class="css-view-13b7bgz r-pointerEvents-ah5dr5"
  style="box-shadow: 0px 0px 0px rgba(0,0,0,1.00); margin-right: 10px; margin-left: 10px; vertical-align: top;"
/>
`;

exports[`components/View prop "style" value is set 1`] = `
<div
  class="css-view-13b7bgz"
  style="border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px;"
/>
`;

exports[`components/View prop "testID" value is set 1`] = `
<div
  class="css-view-13b7bgz"
  data-testid="123"
/>
`;
